# Dynamic-ETL-Pipeline

./: Datasets_Features.ipynb  Ingestor.ipynb  Ingestor.py  Ingestor_test.ipynb  Polygon_Client.py  Validator_1.ipynb  Validator_2.ipynb  alpha_vantage_client.py  base_api_client.py  compatibility_analysis.pkl  flake.nix  grid_search_top_results.txt  ingestor_test.py  main.py  matcher_config.ipynb  matcher_config.py  prompt_eng.py  pyproject.toml  xgboost_grid_search_results.csv
Ingestor/: Ingestor.ipynb  Polygon_Client.py  flake.nix  matcher_config.py  polygon_df.csv  polygon_df1.csv
UI/: UI.ipynb
Validator/: Thesis1_Validator.ipynb  Validator_1.ipynb  Validator_2.ipynb  combined.csv  weights.pkl
